--- a/class02/benEx201.ipynb
+++ b/class02/benEx201.ipynb
@@ -28,7 +28,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "id": "be87f4fe-f71d-428a-8eeb-1fb823f7d18f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  2.  3.]\n",
+      " [ 2. -4.  6.]\n",
+      " [ 3. -9. -3.]]\n",
+      "[[1.    0.    0.   ]\n",
+      " [2.    1.    0.   ]\n",
+      " [3.    1.875 1.   ]]\n",
+      "[[  1   2   3]\n",
+      " [  0  -8   0]\n",
+      " [  0   0 -12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.linalg as la\n",
+    "np.set_printoptions(suppress=True)\n",
+    "\n",
+    "A = np.array([[1,3,4],[2,1,3],[4,1,2]])\n",
+    "\n",
+    "L = np.array([[1,0,0],[2,1,0],[3,15/8,1]])\n",
+    "U = np.array([[1,2,3],[0,-8,0],[0,0,-12]])\n",
+    "print(L.dot(U))\n",
+    "print(L)\n",
+    "print(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "5bbf1aa8-ad92-4ba5-a853-2c858ddfe4d3",
    "metadata": {},
    "outputs": [
@@ -72,7 +108,6 @@
     "\n",
     "P, L, U = la.lu(A)\n",
     "print(np.dot(P.T, A))\n",
-    "print\n",
     "print(np.dot(L, U))\n",
     "print(\"P = \\n\",P)\n",
     "print(\"L = \\n\",L)\n",
@@ -164,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be87f4fe-f71d-428a-8eeb-1fb823f7d18f",
+   "id": "6e120545-9b52-4d20-8c3b-771e3eac7481",
    "metadata": {},
    "outputs": [],
    "source": []
