--- a/class02/benEx201.ipynb
+++ b/class02/benEx201.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "be87f4fe-f71d-428a-8eeb-1fb823f7d18f",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
     "import scipy.linalg as la\n",
     "np.set_printoptions(suppress=True)\n",
     "\n",
-    "A = np.array([[1,3,4],[2,1,3],[4,1,2]])\n",
+    "A = np.array([[1,2,3],[2,-4,6],[3,-9,-3]])\n",
     "\n",
     "L = np.array([[1,0,0],[2,1,0],[3,15/8,1]])\n",
     "U = np.array([[1,2,3],[0,-8,0],[0,0,-12]])\n",
